--- a/Web.config
+++ b/Web.config
@@ -6,11 +6,19 @@
   -->
 
 <configuration>
-
     <system.web>
-      <compilation debug="true" targetFramework="4.5.2" />
+      <customErrors mode="Off"></customErrors>
+      <compilation debug="false" targetFramework="4.5.2" />
       <httpRuntime targetFramework="4.5.2" />
     </system.web>
+  <system.webServer>
+    <directoryBrowse enabled="true"/>
+     <defaultDocument> 
+        <files>
+          <add value="KamilOlszewski.aspx"/>
+        </files> 
+    </defaultDocument> 
+  </system.webServer>
 <appSettings>
       <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
  </appSettings>
